fix: wrapped alignment

--- a/src/headers/SiteHeader.scss
+++ b/src/headers/SiteHeader.scss
@@ -59,13 +59,15 @@
   --logo-width-slim: 100px;
 
   // Link
-  --link-align-items: flex-end;
+  --link-align-items-wrapped: center;
+  --link-align-items-inline: flex-end;
   --link-bottom-border: 3px solid transparent;
   --link-font-size: var(--bloom-font-size-xs);
   --link-font-weight: 400;
   --link-height: 100%;
   --link-hover-bottom-border: 3px solid var(--bloom-color-primary);
-  --link-padding: var(--bloom-s1) var(--bloom-s3) var(--bloom-s3) var(--bloom-s3);
+  --link-padding-wrapped: var(--bloom-s2) var(--bloom-s3);
+  --link-padding-inline: var(--bloom-s1) var(--bloom-s3) var(--bloom-s3) var(--bloom-s3);
   --link-text-color: var(--bloom-color-gray-750);
   --link-text-hover-color: var(--bloom-color-gray-750);
   --link-text-desktop-color: var(--bloom-color-gray-750);
@@ -434,6 +436,10 @@
   justify-content: flex-start;
   margin-top: var(--bloom-s3);
   padding-left: var(--bloom-s2);
+  .site-header__link {
+    align-items: var(--link-align-items-wrapped);
+    padding: var(--link-padding-wrapped);
+  }
 }
 
 .site-header__navbar-inline {
@@ -441,7 +447,8 @@
   justify-content: flex-end;
 
   .site-header__link {
-    margin-top: var(--bloom-s3);
+    align-items: var(--link-align-items-inline);
+    padding: var(--link-padding-inline);
   }
 }
 
@@ -452,7 +459,6 @@
   height: var(--link-height);
   padding: var(--link-padding);
   display: flex;
-  align-items: var(--link-align-items);
   font-weight: var(--link-font-weight);
   border-bottom: var(--link-bottom-border);
   flex-shrink: 1;
